--- a/index.html
+++ b/index.html
@@ -25,20 +25,23 @@ alert("不正解…");
 
 </script>
 
-お疲れさまでした！
-謎解きとか、ボドゲももっと一緒にやりたかったです。
+
+
+お疲れさまでした！<br>
+謎解きとか、ボドゲももっと一緒にやりたかったです。<br>
 すーさんは部室で会うことも比較的多かったので
-いなくなったら寂しくなるなって思います。
-すーさんのいる部室の雰囲気が好きでした。。
+いなくなったら寂しくなるなって思います。<br>
+すーさんのいる部室の雰囲気が好きでした。。<br>
 ジャグリングめちゃくちゃ巧いのに
-あんまり教われなかったのが心残りです。
-これからも公演とか見に来てください！
-ただ遊びに来るのも大歓迎です。
+あんまり教われなかったのが心残りです。<br>
+これからも公演とか見に来てください！<br>
+ただ遊びに来るのも大歓迎です。<br>
 最後に、キーワードはクリームでしたが、
-ジョジョ3部のジョセフの言葉を贈ります。
+ジョジョ3部のジョセフの言葉を贈ります。<br>
 『また会おうッ！わしのことが嫌いじゃあなけりゃあな！』
 
-
+<br>
+<img src="132383917561713208204_jojo10_m.jpg" alt="絵">
 
 </body>
 </html>
